Changelog
=========

0.2 - Unreleased
----------------

* Added support for git.
  [fschulze]

* Throw error when trying to checkout unknown package.
  [fschulze]

* Fixed target directory for checkouts.
  [fschulze]

0.1 - 2009-03-19
----------------

* Initial release
